--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,12 @@
     margin: 0;
 }
 
+.top-head {
+    width: 100%;
+    height: 150px;
+    line-height: 150px;
+}
+
 .money {
     width: 100%;
     height: 100%;
