--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ body {
     display: inline-block;
     padding: 12px;
     box-sizing: border-box;
+    position: relative;
 }
 
 .have-cash, .should-returned {
@@ -72,13 +73,19 @@ body {
     color: #666666;
     font-weight: unset;
     font-size: 16.67px;
+    text-align: left;
 }
 
 .total-money p {
+    width: 120px;
     text-align: right;
     color: #D4ae79;
     font-size: 26.66px;
-    margin-top: 9px;
+    /* margin-top: 9px; */
+    position: absolute;
+    right: 12px;
+    bottom: 6px;
+    overflow: scroll;
 }
 
 .liability, .should-returned {
