--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,7 @@ body {
     font-weight: unset;
     font-size: 20px;
     margin-left: 12px;
+    height: 26px;
 }
 
 .assets .assets-item {
@@ -158,7 +159,7 @@ body {
     width: auto;
     border: none;
     background: none;
-    width: 100px;
+    /* width: 100px; */
     text-align: right;
 }
 
@@ -196,7 +197,7 @@ body {
     text-align: right;
 }
 
-.new-chart1, .new-chart2, .chart-action{
+.new-chart1, .new-chart2, .chart-action, .clear-data{
     position: fixed;
     /* height: 200px; */
     width: 284px;
@@ -210,6 +211,25 @@ body {
     display: none;
 }
 
+.show-clear {
+    position:fixed;
+    bottom:20px;
+    right:20px;
+    color:#8f8f8f;
+    font-size:20px;
+}
+.show-clear:active {
+    color:#ff425c;
+}
+
+.clear-data {
+    /* width: 200px;
+    margin-left: -100px; */
+    top: unset;
+    bottom: 20px;
+    text-align: center;
+}
+
 .new-chart1 {
     top: 20%; 
 }
@@ -221,7 +241,7 @@ body {
     text-align: center;
 }
 
-.confirm-chart, .cancel-chart, .chart-action .cancel-chart-action, .chart-action .delete-chart, .chart-action .update-chart {
+.confirm-chart, .cancel-chart, .cancel-chart-action, .delete-chart, .update-chart, .cancel-clear-data, .confirm-clear-data {
     width: 66px;
     height: 34px;
     background-color: #3EDEED;
@@ -232,7 +252,7 @@ body {
     border-radius: 6px;
 }
 
-.chart-action .cancel-chart-action {
+.chart-action .cancel-chart-action, .cancel-clear-data {
     background-color: #666;
     margin-right: 20px;
 }
@@ -241,7 +261,7 @@ body {
     background-color: #3EDEED;
 }
 
-.chart-action .delete-chart {
+.chart-action .delete-chart, .confirm-clear-data {
     background-color: #ff425c;
     margin-right: 20px;
 }
