1、实时更新值，input外边框去除

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,8 @@ body {
     font-size: 20px;
     border: none;
     background: none;
-    width: 150px;
+    outline: none;
+    /* width: 150px; */
 }
 
 .top-head span {
