--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
     background-color: #EDEDED;
     overflow: hidden;
     width: 100%;
-    padding-bottom: 20px;
+    padding-bottom: 80px;
 }
 
 .top-head {
@@ -214,11 +214,14 @@ body {
 }
 
 .show-clear {
-    position:fixed;
-    bottom:20px;
-    right:20px;
+    /* position:fixed; */
+    /* bottom:20px; */
+    /* right:20px; */
+    float: right;
     color:#8f8f8f;
     font-size:20px;
+    margin-right: 33px;
+    margin-top: 16px;
 }
 .show-clear:active {
     color:#ff425c;
@@ -227,8 +230,8 @@ body {
 .clear-data {
     /* width: 200px;
     margin-left: -100px; */
-    top: unset;
-    bottom: 20px;
+    top: 60px;
+    /* bottom: 20px; */
     text-align: center;
 }
 
@@ -283,7 +286,8 @@ body {
     width: 230px;
     height: 33px;
     border: none;
-    color: #b5b5b5;
+    /* color: #b5b5b5; */
+    color: #666666;
     font-size: 14px;
     margin-top: 20px;
     text-indent: 22px;
